Agregar boton rotar imagen

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <p class="mb-0 text-muted">
                   Imagen de prueba para practicar el layout con Bootstrap.
                 </p>
+                <input type="button" id="rotar" class="btn btn-success" value="Rotar Imagen" onclick="rotarImagen(this)">
               </div>
             </div>
           </div>
