--- a/index.html
+++ b/index.html
@@ -9,59 +9,59 @@
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
   >
 
-  <!-- Estilos propios -->
+  <!-- Estilos -->
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+  <!-- NAVBAR CON GRID -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
 
-      <!-- LOGO -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img
-          src="https://via.placeholder.com/40x40.png?text=G"
-          alt="Logo"
-          class="me-2"
-          style="width:40px; height:40px; border-radius:8px;"
-        >
-        <span class="fw-bold">MiSitio</span>
-      </a>
+      <div class="row w-100 align-items-center">
 
-      <!-- Botón hamburguesa -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNavbar"
-        aria-controls="mainNavbar"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <!-- LOGO -->
+        <div class="col-8 col-lg-3 d-flex align-items-center">
+          <a class="navbar-brand d-flex align-items-center" href="#">
+            <img
+              src="https://tse3.mm.bing.net/th/id/OIP.Sc-pGDkmKH6dLZgbWk-3uAHaHa?rs=1&pid=ImgDetMain&o=7&rm=3"
+              alt="Logo"
+              class="me-2"
+              style="width:40px; height:40px; border-radius:8px;"
+            >
+            <span class="fw-bold">MiSitio</span>
+          </a>
+        </div>
 
-      <!-- Links -->
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
-          </li>
-        </ul>
+        <!-- HAMBURGUESA EN CELULAR -->
+        <div class="col-4 d-lg-none text-end">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mainNavbar"
+            aria-controls="mainNavbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+
+        <!-- MENU -->
+        <div class="col-12 col-lg-9">
+          <div class="collapse navbar-collapse justify-content-lg-end" id="mainNavbar">
+            <ul class="navbar-nav ms-lg-auto mt-3 mt-lg-0">
+              <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Acerca de</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+            </ul>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -83,6 +83,7 @@
 
       <!-- Fila de tarjetas: contador y mensaje -->
       <div class="row g-3 mb-4">
+        
         <!-- Contador -->
         <div class="col-12 col-md-6">
           <div class="card h-100 shadow-sm">
@@ -92,7 +93,7 @@
                 Has hecho clic <span id="counter" class="fw-semibold">0</span> veces.
               </p>
               <button id="btn-click" class="btn btn-primary">
-                Haz clic aquí
+                Haz clic aquIIII
               </button>
             </div>
           </div>
@@ -112,13 +113,15 @@
             </div>
           </div>
         </div>
+
       </div>
 
-      <!-- SECCIÓN DE IMÁGENES -->
+      <!-- SECCION DE IMÁGENES -->
       <section class="mb-4">
         <h2 class="h4 text-center mb-3">Imágenes de ejemplo</h2>
 
         <div class="row g-3">
+
           <!-- Imagen 1 -->
           <div class="col-12 col-md-6">
             <div class="card h-100 shadow-sm">
@@ -132,7 +135,13 @@
                 <p class="mb-0 text-muted">
                   Imagen de prueba para practicar el layout con Bootstrap.
                 </p>
-                <input type="button" id="rotar" class="btn btn-success" value="Rotar Imagen" onclick="rotarImagen(this)">
+
+                <input 
+                  type="button" 
+                  id="rotar"
+                  class="btn btn-success mt-2"
+                  value="Rotar Imagen"
+                  onclick="rotarImagen(this)">
               </div>
             </div>
           </div>
@@ -148,30 +157,35 @@
               <div class="card-body text-center">
                 <h3 class="h6 mb-2">Imagen 2</h3>
                 <p class="mb-0 text-muted">
-                  En pantallas grandes se ve al lado de la otra; en móvil, una debajo de la otra.
+                  Texto de ejemploooooooooooooooooooooooooooo
                 </p>
               </div>
             </div>
           </div>
+
         </div>
       </section>
 
     </main>
 
-    <!-- FOOTER -->
-    <footer class="mt-4 pt-3 border-top text-center text-muted small app-footer">
-      Proyecto de práctica · Creado por Carlos y Gus
+    <!-- FOOTER CON GRID -->
+    <footer class="border-top mt-4 pt-3 text-muted small">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-6 text-center">
+            Proyecto de práctica · Creado por Carlos y Gus
+          </div>
+        </div>
+      </div>
     </footer>
+
   </div>
 
-  <!-- Bootstrap JS (bundle) -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Tu script -->
   <script src="/assets/js/script.js"></script>
+
 </body>
 </html>
